--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,16 +19,20 @@
             %p
               MAKING CONSUMERISM A GAME
       #js-nav
-      .row
-        .span12
-          %ul.nav.nav-pills
-            %li.active#js-home-tab
-              %a{href: "#home"} Home
-            %li#js-faq-tab
-              %a{href: "#faq"} FAQ
-            %li#js-contact-tab
-              %a{href: "#contact"} Contact
-      %hr
+        .row
+          .span12
+            %ul.nav.nav-pills
+              %li.active#js-home-tab
+                %a{href: "#home"} Awards
+              %li#js-faq-tab
+                %a{href: "#faq"} FAQ
+              %li#js-contact-tab
+                %a{href: "#contact"} Contact
+              %li#js-signup-tab
+                %a{href: "#signup"} Sign Up
+              %li#js-webhook-tab
+                %a{href: "#webhook"} Create Awards
+        %hr
 
       = yield
 
